@@ -157,6 +157,8 @@
  * 14-Nov-2007 : Added missing event notifications (DG);
  * 25-Mar-2008 : Added new methods with optional notification - see patch
  *               1913751 (DG);
+ * 07-Apr-2008 : Fixed NPE in removeDomainMarker() and 
+ *               removeRangeMarker() (DG);
  * 
  *
  */
@@ -2161,6 +2163,9 @@ public class CategoryPlot extends Plot implements ValueAxisPlot,
             markers = (ArrayList) this.backgroundDomainMarkers.get(new Integer(
                     index));
         }
+        if (markers == null) {
+            return false;
+        }
         boolean removed = markers.remove(marker);
         if (removed && notify) {
             fireChangeEvent();
@@ -2443,7 +2448,9 @@ public class CategoryPlot extends Plot implements ValueAxisPlot,
             markers = (ArrayList) this.backgroundRangeMarkers.get(new Integer(
                     index));
         }
-
+        if (markers == null) {
+            return false;
+        }
         boolean removed = markers.remove(marker);
         if (removed && notify) {
             fireChangeEvent();
@@ -2497,12 +2504,10 @@ public class CategoryPlot extends Plot implements ValueAxisPlot,
      * @see #isRangeCrosshairLockedOnData()
      */
     public void setRangeCrosshairLockedOnData(boolean flag) {
-
         if (this.rangeCrosshairLockedOnData != flag) {
             this.rangeCrosshairLockedOnData = flag;
             fireChangeEvent();
         }
-
     }
 
     /**
