@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ----------------------
  * CategoryPlotTests.java
  * ----------------------
- * (C) Copyright 2003-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2003-2008, by Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -40,7 +40,9 @@
  * 05-Feb-2007 : Added testAddDomainMarker() and testAddRangeMarker() (DG);
  * 07-Feb-2007 : Added test1654215() (DG);
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
- * 
+ * 07-Apr-2008 : Added testRemoveDomainMarker() and 
+ *               testRemoveRangeMarker() (DG);
+ *
  */
 
 package org.jfree.chart.plot.junit;
@@ -119,7 +121,8 @@ public class CategoryPlotTests extends TestCase {
      */
     public void testConstructor() {
         CategoryPlot plot = new CategoryPlot();
-        assertEquals(RectangleInsets.ZERO_INSETS, plot.getAxisOffset());
+        assertEquals(new RectangleInsets(4.0, 4.0, 4.0, 4.0), 
+        		plot.getAxisOffset());
     }
 
     /**
@@ -758,4 +761,23 @@ public class CategoryPlotTests extends TestCase {
         }
         assertTrue(pass);
     }
+    
+    /**
+     * Check that removing a marker that isn't assigned to the plot returns 
+     * false.
+     */
+    public void testRemoveDomainMarker() {
+    	CategoryPlot plot = new CategoryPlot();
+    	assertFalse(plot.removeDomainMarker(new CategoryMarker("Category 1")));
+    }
+
+    /**
+     * Check that removing a marker that isn't assigned to the plot returns 
+     * false.
+     */
+    public void testRemoveRangeMarker() {
+    	CategoryPlot plot = new CategoryPlot();
+    	assertFalse(plot.removeRangeMarker(new ValueMarker(0.5)));
+    }
+
 }
